dfir_rs/tests/compile-fail-stable/surface_partition_port_indexgap.stderr
error: Output port indices from `partition` must be consecutive from zero, missing 2.
 --> tests/compile-fail-stable/surface_partition_port_indexgap.rs:8:22
  |
8 |         my_partition[3] -> for_each(std::mem::drop);
  |                      ^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
  --> tests/compile-fail-stable/surface_partition_port_indexgap.rs:10:8
   |
10 |     df.run_available_sync();
   |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
